# bank-scrapper

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: daily-collect-audit.yml
config/: bank_sources.yaml  manual_offers.example.yaml
src/: __init__.py  app.py
src/api/: main.py
src/catalog/: __init__.py  data.py  normalization.py  service.py
src/core/: collect.py  config.py  logging.py
src/db/: __init__.py  connection.py  init.py  schema.py
src/exporters/: output.py
src/models/: audit.py  compat.py  promotion.py  pydantic_compat.py
src/offers/: __init__.py  catalog.py  models.py  rules.py  selection.py  sources.py
src/parsers/: __init__.py  promo_blocks.py
src/promo_query_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/query/: __init__.py  audit.py  engine.py  ranking.py  repository.py
src/scrapers/: __init__.py  bnf.py  common.py  continental.py  fuel_prices.py  itau.py  sudameris.py  ueno.py
src/utils/: http.py  promo_dedupe.py  promo_extractors.py  text.py
src/web/: __init__.py  routes.py  view_models.py
tests/: conftest.py  test_api.py  test_audit.py  test_automation.py  test_config.py  test_db_repository.py  test_fuel_prices.py  test_merchant_normalization.py  test_offer_catalog.py  test_promo_blocks.py  test_promo_extractors.py  test_query_engine.py  test_repository_dedupe.py  test_repository_idempotent.py  test_scrapers_banks.py  test_web_ui.py
tests/__pycache__/: test_api.cpython-311-pytest-9.0.3.pyc.30100  test_web_ui.cpython-311-pytest-9.0.3.pyc.30100
(+33 files in other folders)
